[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "progressor-lib"
version = "1.0.1"
description = "Enhanced progress bars with themes, colors, and custom templates"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Dr. Libor Benes, M.A.", email = "Benes@iwp.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals"
]

[project.urls]
Homepage = "https://github.com/LiborBenes-US/progressor-lib"
Repository = "https://github.com/LiborBenes-US/progressor-lib"
Issues = "https://github.com/LiborBenes-US/progressor-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/progressor"]
